--- a/WebSite/VpnSite/App_GlobalResources/Resource.resx
+++ b/WebSite/VpnSite/App_GlobalResources/Resource.resx
@@ -117,82 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConfirmEmail" xml:space="preserve">
-    <value>Confirm Email</value>
-  </data>
-  <data name="ConfirmPassword" xml:space="preserve">
-    <value>Confirm Password</value>
-  </data>
-  <data name="CreateAccount" xml:space="preserve">
-    <value>Create Account</value>
-  </data>
-  <data name="Email" xml:space="preserve">
-    <value>Email </value>
-  </data>
-  <data name="FirstName" xml:space="preserve">
-    <value>First Name</value>
-  </data>
-  <data name="FooterCopR" xml:space="preserve">
-    <value>&amp;copy Copyright 2016.</value>
-  </data>
-  <data name="CompanyName" xml:space="preserve">
-    <value>Majorsilence Solutions Inc.</value>
-  </data>
-  <data name="FooterFollowUs" xml:space="preserve">
-    <value>follow us</value>
-  </data>
-  <data name="FooterLang" xml:space="preserve">
-    <value>language</value>
-  </data>
-  <data name="FooterPPolicy" xml:space="preserve">
-    <value>Privacy Policy</value>
-  </data>
-  <data name="FooterPrice" xml:space="preserve">
-    <value>Pricing</value>
-  </data>
-  <data name="FooterTos" xml:space="preserve">
-    <value>Terms of Service</value>
-  </data>
-  <data name="ForgotPassword" xml:space="preserve">
-    <value>Forgot Password</value>
-  </data>
-  <data name="LastName" xml:space="preserve">
-    <value>Last Name</value>
-  </data>
-  <data name="MenuAboutUs" xml:space="preserve">
-    <value>About Us</value>
-  </data>
-  <data name="MenuLogin" xml:space="preserve">
-    <value>Login</value>
-  </data>
-  <data name="MenuLogout" xml:space="preserve">
-    <value>Logout</value>
-  </data>
-  <data name="MenuServices" xml:space="preserve">
-    <value>Services</value>
-  </data>
-  <data name="MenuSetup" xml:space="preserve">
-    <value>Setup</value>
-  </data>
-  <data name="MenuSignUp" xml:space="preserve">
-    <value>Sign Up</value>
-  </data>
-  <data name="NewPassword" xml:space="preserve">
-    <value>New Password</value>
-  </data>
-  <data name="Password" xml:space="preserve">
-    <value>Password</value>
-  </data>
-  <data name="ResetCode" xml:space="preserve">
-    <value>Reset Code</value>
-  </data>
-  <data name="ResetPassword" xml:space="preserve">
-    <value>Reset Password</value>
-  </data>
-  <data name="Submit" xml:space="preserve">
-    <value>Submit</value>
-  </data>
-  <data name="MenuAccount" xml:space="preserve">
-    <value>Account</value>
+  <data name="hello" xml:space="preserve">
+    <value>world</value>
   </data>
 </root>
